# Bunny_serve

./: .gitignore  README.md
livekit-server/: .dockerignore  .env.example  .gitignore  agent.py  client.py  client2.py  main.py  pyproject.toml  requirements.txt  start.sh
livekit-server/config/: livekit.yaml
livekit-server/src/agent/: ERROR_HANDLING_README.md  create_error_audio.py  error_callback.py  error_handler.py  filtered_agent.py  main_agent.py
livekit-server/src/config/: config_loader.py  datadog_config.py
livekit-server/src/handlers/: chat_logger.py
livekit-server/src/mcp/: __init__.py  device_control_service.py  mcp_client.py  mcp_executor.py  mcp_handler.py
livekit-server/src/memory/: local_memory_provider.py  mem0_provider.py
livekit-server/src/providers/: edge_tts_provider.py  funasr_stt_provider copy.py  funasr_stt_provider.py  funasr_ws_client.py  ollama_llm_provider.py  provider_factory.py  silero_vad_provider.py  ten_vad_wrapper.py
livekit-server/src/services/: analytics_service.py  chat_history_service.py  foreground_audio_player.py  google_search_service.py  music_service.py  prompt_service.py  qdrant_semantic_search.py  question_generator_service.py  riddle_generator_service.py  semantic_search.py  simple_audio_player.py  story_service.py  tts_audio_player.py  unified_audio_player.py
livekit-server/src/utils/: __init__.py  audio_state_manager.py  database_helper.py  helpers.py  loki_agent_logger.py  loki_bot_logger.py  model_cache.py  model_preloader.py  prompt_manager.py  service_cache.py  text_filter.py
mqtt-gateway/: .dockerignore  (+12 more)
(+30 files in other folders)
